Fixed #54058: [VCS] NPE when extend web module in J2EE application